--- a/app/templates/user_form.html
+++ b/app/templates/user_form.html
@@ -60,6 +60,11 @@
             </td>
         </tr>
 
+        <tr class="tr-full-width">
+            <td><label for="password">Password:</label></td>
+            <td><input type="password" id="password" name="password" placeholder="{{ 'Leave blank to keep current' if user else 'Enter password' }}">
+            </td>
+        </tr>
     </table>
     <div class="form-actions">
         <button type="submit" class="btn btn-success" style="width: 120px;">Save</button>
