fix speechlog editing console errors

--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -154,8 +154,8 @@
 <script>
   var MENTOR_CANDIDATES = [
     {% for m in mentor_candidates %}
-  { id: { { m.id } }, name: { { m.Name | tojson } } },
-  {% endfor %}
+    { id: {{ m.id | tojson | safe }}, name: {{ m.Name | tojson | safe }} },
+    {% endfor %}
   ];
   console.log("MENTOR_CANDIDATES loaded:", MENTOR_CANDIDATES);
 </script>
